--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "security"]
-	path = security
+	path = back/src/main/resources/security
 	url = https://github.com/2024-TeamPS/security.git
